# file-tag

./: Cargo.toml  README.md  build.rs  file-tag.rc
src/: main.rs
src/ui/: dialog.rs
src/util/: canonical_name.rs  mod.rs  reg.rs
