[package]
name = "file-tag"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
fltk = { version = "^1.4" }
fltk-theme = "0.7"
regex = "1.10.6"
winreg = "0.52.0"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
